--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="UTF-8">
-	<title>iColabora| Nossas Vagas</title>
+	<title>iColabora | Nossas Vagas</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://file.myfontastic.com/Em4YZmZmCXwpUgrBTrsWFo/icons.css" rel="stylesheet">
@@ -79,6 +79,7 @@ Confira as vagas e candidate-se:</p>
 					<p class="vagas_sub">
 					Infelizmente nesse momento não temos vagas abertas para essa posição =/
 					</p>
+					<a href="#" class="candidato_btn">Candidatar-se</a>
 				</article>
 			</section>
 		</div>
