--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@ Confira as vagas e candidate-se:</p>
 		</div>
 	</main>
 
-
+<footer class="footer">
+	<p class="footer_txt">iColabora 2016® - Empowering Business People.</p>
+</footer>
 	<script src="js/menu.js"></script>
 </body>
 </html>
