--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Confira as vagas e candidate-se:</p>
 
 <footer class="footer">
 	<p class="footer_txt">iColabora 2016® - Empowering Business People.</p>
+	<img src="img/ico.png" alt="Icone iColabora" width="50px" style="margin:auto;">
 </footer>
 	<script src="js/menu.js"></script>
 </body>
