--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>iColabora | Nossas Vagas</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/footer.css">
 	<link href="https://file.myfontastic.com/Em4YZmZmCXwpUgrBTrsWFo/icons.css" rel="stylesheet">
 </head>
 <body>
