changed menu styles and add vagas

--- a/index.html
+++ b/index.html
@@ -82,6 +82,27 @@ Confira as vagas e candidate-se:</p>
 					</p>
 					<a href="#" class="candidato_btn">Candidatar-se</a>
 				</article>
+				<article class="lista_vagas">
+				<h3 class="info_item">Service Desk Analyst</h3>
+					<p class="vagas_sub">
+					Infelizmente nesse momento não temos vagas abertas para essa posição =/
+					</p>
+					<a href="#" class="candidato_btn">Candidatar-se</a>
+				</article>
+				<article class="lista_vagas">
+				<h3 class="info_item">Key Account</h3>
+					<p class="vagas_sub">
+					Infelizmente nesse momento não temos vagas abertas para essa posição =/
+					</p>
+					<a href="#" class="candidato_btn">Candidatar-se</a>
+				</article>
+				<article class="lista_vagas">
+				<h3 class="info_item">Data Scientist</h3>
+					<p class="vagas_sub">
+					Infelizmente nesse momento não temos vagas abertas para essa posição =/
+					</p>
+					<a href="#" class="candidato_btn">Candidatar-se</a>
+				</article>
 			</section>
 		</div>
 	</main>
