--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>iColabora | Nossas Vagas</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<link rel="icon" href="img/favicon.ico">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/footer.css">
 	<link href="https://file.myfontastic.com/Em4YZmZmCXwpUgrBTrsWFo/icons.css" rel="stylesheet">
@@ -34,7 +35,7 @@
 		<div class="conteudo">
 		<h2 class="vagas_titulo">NOSSAS VAGAS</h2>
 		<span style="width:140px; background-color: #f58a1f; height:5px; margin: auto; display:block; "></span>
-		<p class="vagas_texto">Aqui na iColabora lidamos com desafios diários e temos orgulho do nosso mindset ágil. Gostamos de criar soluções ousadas porque nos sentimos seguros pra isso :D <br> 
+		<p class="vagas_texto">Aqui na iColabora lidamos com desafios diários e temos orgulho do nosso mindset ágil. <br>Gostamos de criar soluções ousadas porque nos sentimos seguros pra isso :D <br> 
 Confira as vagas e candidate-se:</p>
 			<section class="info">
 			<article class="artigo">
@@ -70,9 +71,9 @@ Confira as vagas e candidate-se:</p>
 					<strong>Contratação:</strong> CLT<br> 
 					<strong>Vagas disponíveis:</strong> 2 
 					</div>
-					<p style="border-bottom: 1px dotted #000; margin: 20px 10px; color: #dcdcd; display:block; width:35px;">
+					<a href="https://www.youtube.com/watch?v=ZXsQAXx_ao0" target="_blank" style=" text-decoration:none; border-bottom: 1px dotted #000; margin: 20px 10px; color: #dcdcd; display:block; width:35px;">
 					do it!
-					</p>
+					</a>
 					<a href="#" class="candidato_btn">Candidatar-se</a>
 				</article>
 				<article class="lista_vagas">
@@ -108,8 +109,8 @@ Confira as vagas e candidate-se:</p>
 	</main>
 
 <footer class="footer">
-	<p class="footer_txt">iColabora 2016® - Empowering Business People.</p>
-	<img src="img/ico.png" alt="Icone iColabora" width="50px" style="margin:auto;">
+	<p class="footer_txt"><a href="http://www.icolabora.com.br/" target="_blank">iColabora 2016® - Empowering Business People.</a></p>
+	<img src="img/ico.png" alt="Icone iColabora" width="50px" style="margin:10px auto;">
 </footer>
 	<script src="js/menu.js"></script>
 </body>
