add media queries and new classes

--- a/index.html
+++ b/index.html
@@ -77,32 +77,44 @@ Confira as vagas e candidate-se:</p>
 					<a href="#" class="candidato_btn">Candidatar-se</a>
 				</article>
 				<article class="lista_vagas">
+				<div class="oportunidade">
 				<h3 class="info_item">Solution Designer</h3>
 					<p class="vagas_sub">
 					Infelizmente nesse momento não temos vagas abertas para essa posição =/
 					</p>
+				</div>
+					<div class="canditatese">
 					<a href="#" class="candidato_btn">Candidatar-se</a>
+					</div>
+				</div>
 				</article>
 				<article class="lista_vagas">
+				<div class="oportunidade">
 				<h3 class="info_item">Service Desk Analyst</h3>
 					<p class="vagas_sub">
 					Infelizmente nesse momento não temos vagas abertas para essa posição =/
-					</p>
+					</p></div>
+					<div class="canditatese">
 					<a href="#" class="candidato_btn">Candidatar-se</a>
+					</div>
 				</article>
 				<article class="lista_vagas">
+				<div class="oportunidade">
 				<h3 class="info_item">Key Account</h3>
 					<p class="vagas_sub">
 					Infelizmente nesse momento não temos vagas abertas para essa posição =/
-					</p>
-					<a href="#" class="candidato_btn">Candidatar-se</a>
+					</p></div>
+					<div class="canditatese">
+					<a href="#" class="candidato_btn">Candidatar-se</a></div>
 				</article>
 				<article class="lista_vagas">
+				<div class="oportunidade">
 				<h3 class="info_item">Data Scientist</h3>
 					<p class="vagas_sub">
 					Infelizmente nesse momento não temos vagas abertas para essa posição =/
-					</p>
-					<a href="#" class="candidato_btn">Candidatar-se</a>
+					</p></div>
+					<div class="canditatese">
+					<a href="#" class="candidato_btn">Candidatar-se</a></div>
 				</article>
 			</section>
 		</div>
