--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<span class="icon-menu" id="btn-menu"></span>
 		<nav class="nav" id="nav">
 			<ul class="menu">
-				<li class="menu__item"><a href="#" class="menu_link">Home</a></li>
+				<li class="menu__item"><a href="http://www.icolabora.com.br/" target="_blank" class="menu_link">Home</a></li>
 				<li class="menu__item"><a href="#" class="menu_link">Nossas Vagas</a></li>
 			</ul>
 		</nav>
